# presidio-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml  ner.yml  pypi.yml  release.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_smoke.py
crates/presidio-analyzer/: Cargo.toml
crates/presidio-analyzer/data/: README.md  cities.parquet  first_names.parquet  last_names.parquet  tickers.parquet
crates/presidio-analyzer/examples/: gaz_download.rs  pos_probe.rs
crates/presidio-analyzer/scripts/: export_pos_onnx.py
crates/presidio-analyzer/src/: analyzer_engine.rs  context.rs  country.rs  entities.rs  gazetteer.rs  lib.rs  ner_recognizer.rs  nlp.rs  onnx_nlp.rs  pattern.rs  phone_recognizer.rs  predefined.rs  recognizer.rs  registry.rs  validators.rs
crates/presidio-analyzer/tests/: analyzer_tests.rs  country_intl.rs  country_phone.rs  coverage.rs  engine_options.rs  multilang.rs  per_language.rs
crates/presidio-anonymizer/: Cargo.toml
crates/presidio-anonymizer/src/: aes_cipher.rs  deanonymize.rs  engine.rs  entities.rs  factory.rs  lib.rs  operator.rs  operators.rs
crates/presidio-anonymizer/tests/: anonymizer_tests.rs  coverage.rs  surrogate.rs
crates/presidio-cli/: Cargo.toml
crates/presidio-cli/src/: main.rs
crates/presidio-ner/: Cargo.toml
crates/presidio-ner/src/: decode.rs  engine.rs  lib.rs
crates/presidio-ner/tests/: live.rs
crates/presidio-server/: Cargo.toml  Dockerfile
crates/presidio-server/docs/: index.html
crates/presidio-server/src/: lib.rs  limina.rs  main.rs
crates/presidio-server/tests/: api.rs
scripts/: coverage.sh
