[workspace]
resolver = "2"
members = [
    "crates/presidio-analyzer",
    "crates/presidio-anonymizer",
    "crates/presidio-cli",
    "bindings/python",
]
# The Python extension module (pyo3 cdylib) is built by maturin, not by plain
# `cargo build`/`cargo test`. Keep it out of the default set so core builds,
# tests and coverage never require a Python interpreter.
default-members = [
    "crates/presidio-analyzer",
    "crates/presidio-anonymizer",
    "crates/presidio-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["presidio-rust contributors"]
repository = "https://github.com/data-privacy-stack/presidio-rust"
description = "A Rust port of Microsoft Presidio (PII detection & anonymization)"

[workspace.dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
rand = "0.8"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
