[package]
name = "presidio-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PII detection engine — Rust port of presidio-analyzer"
# Parquet files are the canonical dataset source-of-truth; the build only needs
# the derived .txt.gz, so keep the published crate lean.
exclude = ["data/*.parquet", "data/README.md"]

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
phonenumber = "0.3"
flate2 = { version = "1", optional = true }

[features]
# Embeds ~196k first names + ~794k surnames (multi-country census DB) as
# gazetteer recognizers. Off by default — pulls in flate2 and ~2.6 MB of
# compressed data.
names-gazetteer = ["dep:flate2"]
