[package]
name = "presidio-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PII detection engine — Rust port of presidio-analyzer"
# Parquet files are the canonical dataset source-of-truth; the build only needs
# the derived .txt.gz, so keep the published crate lean.
# The gazetteer data (~27 MB gz + parquet) exceeds the crates.io size limit, so
# it is excluded from the published package. Gazetteer features therefore only
# build from a git/path checkout, not from crates.io.
exclude = ["data"]

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
phonenumber = "0.3"
flate2 = { version = "1", optional = true }

[features]
# Gazetteer recognizers backed by embedded, gzipped reference data. Each dataset
# is a separate feature so you only pay for what you enable. All pull in flate2.
#   names-gazetteer    FIRST_NAME + LAST_NAME  (~196k + ~794k)   ~2.6 MB
#   cities-gazetteer   LOCATION                (~707k)            ~2.6 MB
#   orgs-gazetteer     ORGANIZATION            (~3.17M, GLEIF)    ~24 MB
#   tickers-gazetteer  STOCK_TICKER            (~9.9k, SEC)       ~23 KB
names-gazetteer = ["dep:flate2"]
cities-gazetteer = ["dep:flate2"]
orgs-gazetteer = ["dep:flate2"]
tickers-gazetteer = ["dep:flate2"]
gazetteers-all = [
    "names-gazetteer",
    "cities-gazetteer",
    "orgs-gazetteer",
    "tickers-gazetteer",
]
