[package]
name = "presidio-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PII detection engine — Rust port of presidio-analyzer"
# The gazetteer data is too large to ship inside the crates.io package. It lives
# in git and is downloaded + cached at first use instead (see src/gazetteer.rs),
# so exclude the whole data/ dir from the published package.
exclude = ["data"]

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
phonenumber = "0.3"
flate2 = { version = "1", optional = true }
ureq = { version = "2", default-features = false, features = ["tls"], optional = true }
dirs = { version = "5", optional = true }

[features]
# Gazetteer recognizers backed by large reference-data lists. Each dataset is a
# separate feature so you only enable what you need. The gzipped data is fetched
# and cached at first use (git checkout: read from data/; otherwise downloaded
# from the crate's pinned GitHub tag). Set PRESIDIO_GAZETTEER_DIR to load offline.
#   names-gazetteer    FIRST_NAME + LAST_NAME  (~196k + ~794k)
#   cities-gazetteer   LOCATION                (~707k, GeoNames)
#   orgs-gazetteer     ORGANIZATION            (~3.12M, GLEIF)
#   tickers-gazetteer  STOCK_TICKER            (~9.9k, SEC)
_gazetteer = ["dep:flate2", "dep:ureq", "dep:dirs"]
names-gazetteer = ["_gazetteer"]
cities-gazetteer = ["_gazetteer"]
orgs-gazetteer = ["_gazetteer"]
tickers-gazetteer = ["_gazetteer"]
gazetteers-all = [
    "names-gazetteer",
    "cities-gazetteer",
    "orgs-gazetteer",
    "tickers-gazetteer",
]
