[package]
name = "presidio-anonymizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PII anonymization/deanonymization engine — Rust port of presidio-anonymizer"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
aes.workspace = true
cbc.workspace = true
rand.workspace = true
anyhow.workspace = true
