[package]
name = "presidio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for presidio-rust (analyze + anonymize)"

[[bin]]
name = "presidio"
path = "src/main.rs"

[dependencies]
presidio-analyzer = { path = "../presidio-analyzer", version = "0.1.10" }
presidio-anonymizer = { path = "../presidio-anonymizer", version = "0.1.10" }
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
